--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", sans-serif !important;
   background: #ebe9e9 !important;
 }
 
@@ -28,4 +28,14 @@ body {
   color: #fff !important;
   text-transform: capitalize !important;
   border-radius: 5px;
+}
+
+.main .sidebarWrapper {
+  width: 20%;
+  flex: 0 0 20%;
+  transition: all 0.3s ease-in-out;
+}
+
+.main .sidebarWrapper:hover .sidebar::-webkit-scrollbar {
+  background: #0858f7 !important;
 }
