--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,6 +2,10 @@ header {
   width: 100%;
   height: 70px;
   background: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
 
 header .logo {
@@ -89,7 +93,7 @@ header button.rounded-circle:hover svg {
 }
 #account-menu li {
   font-size: 14px !important;
-  padding: 12px 15px !important;
+  padding: 7px 15px !important;
 }
 #account-menu li svg {
   font-size: 20px !important;
@@ -146,4 +150,10 @@ header button.rounded-circle:hover svg {
   max-height: 300px;
   overflow-y: scroll;
   overflow-x: hidden;
+}
+
+.css-zza0ns-MuiBadge-badge {
+  background-color: #0858f7 !important;
+  top: -10px !important;
+  right: -5px !important;
 }
