make a react recharts and customization

--- a/src/Pages/DashBoard/DashBoard.css
+++ b/src/Pages/DashBoard/DashBoard.css
@@ -97,8 +97,8 @@
 .graphBox {
   background-image: linear-gradient(#1a50b5, #2a6ff7);
   border-radius: 10px;
-  padding: 25px;
 }
+
 .graphBox h4 {
   font-size: 16px;
   font-weight: 600;
@@ -108,6 +108,20 @@
   color: #fff;
   opacity: 0.7;
 }
+
+.recharts{
+  padding: 0px 3px !important;
+  bottom: 0 !important;
+}
+.areaCharts{
+  opacity: 0.4;
+}
+
+
+
+
+
+
 .card {
   margin: 20px 0px;
   border-radius: 10px;
