--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -9,6 +9,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   padding-bottom: 30px;
+  transition: all 0.3s ease-in-out;
 }
 .sidebar::-webkit-scrollbar {
   width: 3px !important;
