update dark mode system and products details page

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@ body {
   background: #ebe9e9 !important;
   overflow-x: hidden;
 }
+body.dark {
+  background: #071739 !important;
+}
 
 .btn-blue {
   background: #0858f7 !important;
@@ -37,6 +40,10 @@ body {
 .btn-big {
   padding: 10px 25px !important;
   font-size: 16px !important;
+}
+.btn-big svg {
+  margin-right: 7px;
+  font-size: 25px !important;
 }
 
 .btn-rounded {
@@ -60,6 +67,10 @@ body {
 
 .link.color {
   color: #0858f7;
+}
+
+h4 {
+  line-height: 32px;
 }
 
 .main .sidebarWrapper {
