--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -11,6 +11,9 @@
   padding-bottom: 30px;
   transition: all 0.3s ease-in-out;
 }
+body.dark .sidebar {
+  background: #112143 !important;
+}
 .sidebar::-webkit-scrollbar {
   width: 3px !important;
 }
@@ -37,17 +40,26 @@
   font-family: "Open Sans", sans-serif !important;
   font-size: 15px !important;
 }
+
+body.dark .sidebar ul li button {
+  color: rgba(255, 255, 255, 0.8) !important;
+}
+
 .sidebar ul li button:hover {
   background: #f1f1f1 !important;
+}
+
+body.dark .sidebar ul li button:hover {
+  background: rgba(255, 255, 255, 0.1) !important;
 }
 
 .sidebar ul li button.active {
   background: #f1f1f1 !important;
 }
 
-/* .sidebar ul li button * {
-  color: #5e5d72 !important;
-} */
+body.dark .sidebar ul li button.active {
+  background: rgba(255, 255, 255, 0.1) !important;
+}
 
 .sidebar ul li button .icon {
   display: flex;
@@ -94,6 +106,10 @@
   left: 25px;
   background: rgba(0, 0, 0, 0.2);
 }
+
+body.dark .sidebar ul .subMenu::before {
+  background: rgba(255, 255, 255, 0.2) !important;
+}
 .sidebar ul .subMenu li {
   width: 100%;
   list-style: none;
@@ -109,7 +125,15 @@
   -webkit-transition: all 0.3s linear !important;
 }
 
+body.dark .sidebar ul .subMenu li a {
+  color: rgba(255, 255, 255, 0.7);
+}
+
 .sidebar ul .subMenu li a:hover {
+  color: #0858f7 !important;
+}
+
+body.dark .sidebar ul .subMenu li a:hover {
   color: #0858f7 !important;
 }
 
@@ -149,6 +173,10 @@
   justify-content: center;
   position: relative;
   overflow: hidden;
+}
+
+body.dark .logoutWrapper .logoutBox {
+  background: linear-gradient(rgb(35 108 248 / 25%), rgb(35 108 251 / 40%));
 }
 
 .logoutWrapper .logoutBox::before {
