--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -126,7 +126,7 @@ body.dark .sidebar ul .subMenu::before {
 }
 
 body.dark .sidebar ul .subMenu li a {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7) !important;
 }
 
 .sidebar ul .subMenu li a:hover {
