--- a/src/Pages/ProductUpload/ProductUpload.css
+++ b/src/Pages/ProductUpload/ProductUpload.css
@@ -29,3 +29,120 @@ body.dark .form .form-group textarea {
   border: 1px solid #253557 !important;
   color: #b4b4b4 !important;
 }
+
+.mc-card-header {
+  align-items: flex-start;
+  display: flex;
+  gap: 0;
+  justify-content: space-between;
+  margin-bottom: 18px;
+}
+
+.mc-product-upload-media {
+  grid-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-rows: auto;
+}
+
+.mc-product-upload-image img {
+  border: 2px dashed #e4e4e4;
+  border-radius: 8px;
+  filter: drop-shadow(0 10px 15px rgba(0, 0, 0, 0.05));
+  width: 100%;
+}
+body.dark .mc-product-upload-image img {
+  border: 2px dashed #071739 !important;
+}
+
+
+
+.mc-product-upload-image img,
+.mc-product-upload-image:after {
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+}
+
+img {
+  vertical-align: middle;
+}
+
+.mc-product-upload-media {
+  grid-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-rows: auto;
+}
+
+.mc-product-upload-file {
+  border: 2px dashed #253557;
+  border-radius: 8px;
+  filter: drop-shadow(0 10px 15px rgba(0, 0, 0, 0.05));
+  position: relative;
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+}
+
+body.dark .mc-product-upload-file{
+    border: 2px dashed #071739 !important;
+}
+
+.mc-product-upload-image {
+  cursor: pointer;
+  position: relative;
+}
+
+.mc-product-upload-file label {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  height: 100%;
+  justify-content: center;
+  padding: 20px 0;
+  text-align: center;
+  width: 100%;
+}
+
+.mc-product-upload-file input {
+  height: 100%;
+  position: absolute;
+  visibility: hidden;
+  width: 100%;
+}
+
+.mc-product-upload-file label span {
+  font-size: 14px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100px;
+}
+
+.material-icons{
+  word-wrap: normal;
+  direction: ltr;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
+  text-transform: none;
+  white-space: nowrap;
+}
+
+.material-icons {
+  display: inline-block;
+  font-family: Material Icons;
+  font-size: 24px;
+  letter-spacing: normal;
+}
+.mc-product-upload-file label span svg{
+    font-size: 70px;
+    opacity: .1;
+}
